--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-turnstile": "^1.0.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "resend": "^6.0.2",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
     "zod": "^4.1.5"
